<resources>
    <string name="app_name">WaterMe</string>
    <string name="login">Ingresar</string>
    <string name="signup">Registrar</string>
    <string name="username">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar Contraseña</string>
    <string name="name">Nombre</string>
    <string name="my_plants">Mis plantas</string>
    <string name="add_plant">Agregar Planta</string>
    <string name="description">Descripción</string>
    <string name="wateringDeviceId">ID del dispositivo</string>
    <string name="wateringDevicePassword">Contraseña del dispositivo</string>
    <string name="edit">Editar</string>
    <string name="erase">Eliminar</string>
    <string name="water">Regar</string>
    <string name="time">Tiempo de riego (segundos)</string>
</resources>
