<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.com.magoo.waterme.PlantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgPlant"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/default_plant_img"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtPlantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:text="@string/name"
            android:textSize="25sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtPlantDescription"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:lines="3"/>

        <TextView
            android:id="@+id/txtPlantTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:text="@string/time"
            android:textSize="20sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtDeviceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wateringDeviceId"
            android:textSize="20sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtWateringDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Regar:"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"
                android:layout_gravity="bottom"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btnErase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/erase"
                android:layout_gravity="bottom"
                android:background="@color/red"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnWater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/water"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
