<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.com.magoo.waterme.AddPlantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/txtPlantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLines="1"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtPlantDescription"
            android:inputType="textMultiLine"
            android:lines="2"
            android:minLines="2"
            android:gravity="top|left"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:hint="@string/description"/>

        <EditText
            android:id="@+id/txtDeviceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wateringDeviceId"
            android:maxLines="1"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtDevicePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wateringDevicePassword"
            android:maxLines="1"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Regar:"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMonday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="L"/>

            <Button
                android:id="@+id/btnTuesday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="M"/>

            <Button
                android:id="@+id/btnWednesday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="M"/>

            <Button
                android:id="@+id/btnThursday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="J"/>

            <Button
                android:id="@+id/btnFriday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="V"/>

            <Button
                android:id="@+id/btnSaturday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="S"/>

            <Button
                android:id="@+id/btnSunday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="D"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar imagen:"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgPlant"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/water_me_logo"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="Agregar"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
